--- a/.env
+++ b/.env
@@ -1,1 +1,14 @@
 GOOGLE_GENAI_API_KEY=AIzaSyDZ2PseNedyAmrIWbDxbSX3UuAUWmx33Wg
+
+# NextAuth URL configuration
+NEXTAUTH_URL=http://localhost:9003
+NEXTAUTH_SECRET=your_secure_nextauth_secret_key_here
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
