--- a/amplify.yml
+++ b/amplify.yml
@@ -4,6 +4,8 @@ frontend:
     preBuild:
       commands:
         - npm ci
+        - npm install -g prisma
+        - npx prisma generate
     build:
       commands:
         - npm run build
@@ -15,3 +17,22 @@ frontend:
     paths:
       - node_modules/**/*
       - .next/cache/**/*
+  customHeaders:
+    - pattern: '**/*'
+      headers:
+        - key: 'Strict-Transport-Security'
+          value: 'max-age=31536000; includeSubDomains'
+        - key: 'X-Content-Type-Options'
+          value: 'nosniff'
+        - key: 'X-XSS-Protection'
+          value: '1; mode=block'
+  rewrites:
+    - source: '/api/auth/:all*'
+      target: '/api/auth/:all*'
+      status: '200'
+    - source: '/api/:all*'
+      target: '/api/:all*'
+      status: '200'
+    - source: '/<*>'
+      target: '/index.html'
+      status: '200'
