--- a/package.json
+++ b/package.json
@@ -10,18 +10,13 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "setup-db": "node scripts/setup-database.js",
-    "db:push": "prisma db push",
-    "db:studio": "prisma studio",
-    "prisma:generate": "prisma generate",
-    "postinstall": "prisma generate"
+    "setup-db": "node scripts/setup-database.js"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.0.4",
     "@genkit-ai/next": "^1.0.4",
     "@hookform/resolvers": "^4.1.3",
     "@portabletext/react": "*",
-    "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -43,6 +38,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@sanity/image-url": "*",
+    "@supabase/supabase-js": "^2.49.4",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
     "bcrypt": "^5.1.1",
@@ -77,7 +73,6 @@
     "@types/react-dom": "^18",
     "genkit-cli": "^1.0.4",
     "postcss": "^8",
-    "prisma": "^6.6.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
